Identify current_group in progress-history when id and module-id differ
This commit fixes an issue where the `id` and `module-id` of an app.yaml
question differ caused the progress history to fail display questions
properly in `task-progress-history-list.html` template.

Original matching query worked only when `id` and `module-id` were the
same, which is commonly the case by convention but not strictly true.

We need to find a better walk of relationships to get the `module-id` to
which the current question belongs.

Also minor changes to the `task-progress-history-list.html` to improve
display and code indents for better code folding.

--- a/templates/task-progress-project-list.html
+++ b/templates/task-progress-project-list.html
@@ -4,17 +4,17 @@
     </a>
     {% if current_group %}
     <br>
-    SECTION:&nbsp; <a href="{{task.project.get_absolute_url}}#{{current_group}}" style="color:#444;">
-      {{current_group}}
+    SECTION:&nbsp; <a href="{{task.project.get_absolute_url}}#{{current_group}}" style="color:#444;">{{current_group}}
     </a>
     {% endif %}
 </div>
 
+<div>
 {% for pt in task_progress_project_list %}
   {% if pt.group == current_group %}
     <div class="truncate" style="margin: 0 0 6px 0; padding: 2px; font-size: 1.0em;text-align:left;">
       {% if pt.task_id == task.id %}
-      <span class="glyphicon glyphicon-play-circle"> </span> <b>{{task.title}}</b>
+        <span class="glyphicon glyphicon-play-circle"> </span> <b>{{task.title}}</b>
         {% if context|length > 0 %}
         <div id="question-history-context">
           <ul>
@@ -57,6 +57,8 @@
               <span class="glyphicon glyphicon-check"> </span><a href="{{pt.link}}" style="color: black;"> {{pt.title}}</a>
             {% elif pt.task_started %}
               <span class="glyphicon glyphicon-edit"> </span> <a href="{{pt.link}}" style="color: black;"> {{pt.title}}</a>
+            {% else %}
+              <span class="glyphicon glyphicon-unchecked"> </span> <a href="{{pt.link}}" style="color: black;"> {{pt.title}}</a>
             {% endif %}
           </form>
           {% endif %}
