--- a/templates/authoring-tool-modal.html
+++ b/templates/authoring-tool-modal.html
@@ -225,10 +225,10 @@ label {
             </div>
           </div>
           <div class="form-group authoring_q_type_choice authoring_q_type_multiple-choice authoring_q_type_datagrid">
-            <label for="authoring_tool_qchoices" class="col-sm-2 control-label">Choices</label>
+            <label for="authoring_tool_qfields" class="col-sm-2 control-label">Fields</label>
             <div class="col-sm-10">
-              <textarea class="form-control" id="authoring_tool_qchoices" name="choices"></textarea>
-              <span class="help-block">Put each choice on a separate line and provide as KEY|LABEL|HELP.</span>
+              <textarea class="form-control" id="authoring_tool_qfields" name="fields"></textarea>
+              <span class="help-block">Put each field (AKA "column") on a separate line and provide as KEY|LABEL|HELP.</span>
             </div>
           </div>
           <div class="form-group authoring_q_type_multiple-choice authoring_q_type_datagrid authoring_q_type_integer authoring_q_type_real">
