--- a/templates/project-api.html
+++ b/templates/project-api.html
@@ -186,8 +186,8 @@ API
                 {% if not forloop.last %}, {% endif %}
               {% endfor %}; or null. When uploading with the key-value POST method, repeat the key multiple times in the request to set multiple values
             {% elif question.spec.type == "datagrid" %}
-              <p>Data type: array of strings; each element is one of
-              {% for item in question.spec.choices %}
+              <p>Data type: array of dictionaries; each dictionat element is one of
+              {% for item in question.spec.fields %}
                 <code>{{item.key}}</code> ({{item.text}})
                 {% if not forloop.last %}, {% endif %}
               {% endfor %}; or null. When uploading with the key-value POST method, repeat the key multiple times in the request to set multiple values
