--- a/templates/question.html
+++ b/templates/question.html
@@ -970,8 +970,8 @@ $(function() {
         // ...and for a file field...
         // data.append('value', $('#inputctrl')[0].files[0]);
         //
-        // But web browsers provides a constructor called 'FormData' to
-        // help develpers manipulate form data prior to submission:
+        // But web browsers provide a constructor called 'FormData' to
+        // help developers manipulate form data prior to submission:
         var data = new FormData(form[0]);
 
         {% if q.spec.type == "datagrid" %}
