--- a/templates/authoring-tool-modal.html
+++ b/templates/authoring-tool-modal.html
@@ -188,6 +188,7 @@ label {
                   <option value="yesno">Yes/No</option>
                   <option value="choice">Single Choice</option>
                   <option value="multiple-choice">Multiple Choice</option>
+                  <option value="datagrid">Datagrid</option>
                 </optgroup>
                 <optgroup label="Number Questions">
                   <option value="integer">Integer</option>
@@ -230,7 +231,14 @@ label {
               <span class="help-block">Put each choice on a separate line and provide as KEY|LABEL|HELP.</span>
             </div>
           </div>
-          <div class="form-group authoring_q_type_multiple-choice authoring_q_type_integer authoring_q_type_real">
+          <div class="form-group authoring_q_type_datagrid">
+            <label for="authoring_tool_qfields" class="col-sm-2 control-label">Fields</label>
+            <div class="col-sm-10">
+              <textarea class="form-control" id="authoring_tool_qfields" name="fields"></textarea>
+              <span class="help-block">Put each field (AKA "column") on a separate line and provide as KEY|LABEL|HELP.</span>
+            </div>
+          </div>
+          <div class="form-group authoring_q_type_multiple-choice authoring_q_type_datagrid authoring_q_type_integer authoring_q_type_real">
             <label for="authoring_tool_qmin" class="col-sm-2 control-label">Minimum</label>
             <div class="col-sm-10">
               <input type="number" pattern="[0-9]*" min="0" class="form-control" id="authoring_tool_qmin" name="min">
@@ -238,7 +246,7 @@ label {
               <span class="help-block toggled authoring_q_type_integer authoring_q_type_real">The minimum number allowed. Enter zero to prevent the user from entering negative numbers. Leave blank if there is no minimum.</span>
             </div>
           </div>
-          <div class="form-group authoring_q_type_multiple-choice authoring_q_type_integer authoring_q_type_real">
+          <div class="form-group authoring_q_type_multiple-choice authoring_q_type_datagrid authoring_q_type_integer authoring_q_type_real">
             <label for="authoring_tool_qmax" class="col-sm-2 control-label">Maximum</label>
             <div class="col-sm-10">
               <input type="number" pattern="[0-9]*" min="0" class="form-control" id="authoring_tool_qmax" name="max">
