Fixes for synchronizing with Master
Remove organization reference from profile module
Fix issue with selecting review page
Synchronize siteapp/tests.py

--- a/templates/task-finished.html
+++ b/templates/task-finished.html
@@ -190,7 +190,7 @@
       {% endwith %}
 
       {% if can_review %}
-        <p><a href="{{task.project.get_absolute_url}}/list#task-{{task.id}}" class="btn btn-default">
+        <p><a id="review-answers" href="{{task.project.get_absolute_url}}/list#task-{{task.id}}" class="btn btn-default">
           <em class="glyphicon glyphicon-list"></em>
           Review &raquo;
         </a></p>
