Fixed issue where only users who could use the editing tool could see … (#823)
* Fixed issue where only users who could use the diting tool could see the datagrid questions render

* Update to Django 2.2.12 LTS, Python libs

* Django 2.2.12. Show jsGrid javascript only w Datagrid questions. Add version to fixture app.

Fixes issue where jsGrid javascript caused conflicts with module questions.
Wrapped entire jsGrid javascript `{% if q.spec.type == "datagrid" %}` test.

Also added version info to fixture module test to enable adding
test module to catalog to display and view manually to find issues
causing tests to fail.

Upgrade to Django 2.2.12.

Co-authored-by: Dayton Williams (User) <dwilliams@Daytons-MacBook-Pro.local>
Co-authored-by: Greg Elin <greg.elin@govready.com>

--- a/templates/question.html
+++ b/templates/question.html
@@ -976,7 +976,7 @@ $(function() {
 
         {% if q.spec.type == "datagrid" %}
         datagrid_data = $("#jsGrid").jsGrid("option", "data");
-        console.log('data jsGrid '+ JSON.stringify(datagrid_data));
+        // console.log('data jsGrid '+ JSON.stringify(datagrid_data));
         data.append('value', JSON.stringify(datagrid_data));
         {% endif %}
 
@@ -1077,41 +1077,15 @@ function record_interaction() {
 }
 </script>
 
-{% if authoring_tool_enabled %}
-<script src="{% static 'vendor/js-yaml.min.js' %}"></script>
-<script src="{% static 'js/authoring_tool.js' %}"></script>
-<style>.dropdown-menu.textcomplete-dropdown { z-index: 99999 !important; }</style> {# show over modal #}
-<script>
-$(function() {
-  init_authoring_tool({
-    task: {{task.id}},
-    module: {{task.module.spec|json}},
-    questions: {
-      {{q.key}}: {
-        spec: {{q.spec|json}},
-        choices: "{{q.choices_as_csv|escapejs}}",
-        answer_type_module_id: {% if q.answer_type_module %}{{q.answer_type_module.id}}{% else %}null{% endif %}
-      }
-    },
-    answer_type_modules: [{% for m in q.module.get_referenceable_modules %}
-      { id: "{{m.id}}", title: "{{m.title|escapejs}} ({{m.module_name}})" }{% if not forloop.last %},{% endif %}
-      {% endfor %}],
-    autocomplete_questions: { {% for q in q.module.get_questions %}
-      "{{q.key|escapejs}}": "{{q.value_explanation|truncatechars:50|escapejs}}"{% if not forloop.last %}, {% endif %}{% endfor %}
-    }
-  });
-});
-</script>
-
+{% if q.spec.type == "datagrid" %}
 <script>
   // Render datagrid question type
   // Make focus-area-wrapper wider when question type is datagrid
-  {% if q.spec.type == "datagrid" %}
   $("#col-spacer").removeClass("col-spacer hidden-xs col-sm-1 col-md-1 col-lg-3 col-xl-2");
   $("#col-spacer").addClass("col-spacer hidden-xs col-sm-1 col-md-1 col-lg-1 col-xl-2");
   $("#focus-area-wrapper").removeClass("col-xs-12 col-sm-9 col-md-7 col-lg-6 col-xl-5");
   $("#focus-area-wrapper").addClass("col-xs-12 col-sm-9 col-md-8 col-lg-8 col-xl-7");
-  {% endif %}
+
 
   // Prepare data for jsGrid data grid
   var entries = [
@@ -1139,6 +1113,33 @@ $(function() {
 
       fields: datagrid_fields
   });
+</script>
+{% endif %}
+
+{% if authoring_tool_enabled %}
+<script src="{% static 'vendor/js-yaml.min.js' %}"></script>
+<script src="{% static 'js/authoring_tool.js' %}"></script>
+<style>.dropdown-menu.textcomplete-dropdown { z-index: 99999 !important; }</style> {# show over modal #}
+<script>
+$(function() {
+  init_authoring_tool({
+    task: {{task.id}},
+    module: {{task.module.spec|json}},
+    questions: {
+      {{q.key}}: {
+        spec: {{q.spec|json}},
+        choices: "{{q.choices_as_csv|escapejs}}",
+        answer_type_module_id: {% if q.answer_type_module %}{{q.answer_type_module.id}}{% else %}null{% endif %}
+      }
+    },
+    answer_type_modules: [{% for m in q.module.get_referenceable_modules %}
+      { id: "{{m.id}}", title: "{{m.title|escapejs}} ({{m.module_name}})" }{% if not forloop.last %},{% endif %}
+      {% endfor %}],
+    autocomplete_questions: { {% for q in q.module.get_questions %}
+      "{{q.key|escapejs}}": "{{q.value_explanation|truncatechars:50|escapejs}}"{% if not forloop.last %}, {% endif %}{% endfor %}
+    }
+  });
+});
 </script>
 
 {% endif %}
