--- a/templates/controls/detail.html
+++ b/templates/controls/detail.html
@@ -64,13 +64,13 @@ Remove contextbar from top of page
     {% if control.title is not None %}
     <h2 id="control-heading" class="">
       <small style="color: #888;">NIST SP 800-53 Rev 4</small><br>
-      {{ control.id }} {{ control.title }}
+      {{ control.id_display|upper }} {{ control.title }}
     </h2>
     <div>
       <div id="control-description" class="control-text"><h3>Description</h3>{{ control.description }}</div>
-      <div id="control-responsible"  class="control-text"><h3>Responsible</h3>The <i>{{ control.responsible }}</i> is reponsible for implementing this control.</div>
-      <div id="control-guidance"  class="control-text"><h3>Supplemental Guidance</h3>{{ control.supplemental_guidance }}</div>
-      <div id="control-enhancements"  class="control-text"><h3>Control Enhancements</h3>{{ control.control_enhancements }}</div>
+      <!-- <div id="control-responsible"  class="control-text"><h3>Responsible</h3>The <i>{{ control.responsible }}</i> is reponsible for implementing this control.</div> -->
+      <div id="control-guidance"  class="control-text"><h3>Guidance</h3>{{ control.guidance }}</div>
+      <!-- <div id="control-enhancements"  class="control-text"><h3>Control Enhancements</h3>{{ control.control_enhancements }}</div> -->
     </div>
     {% else %}
     <h2 id="control-heading" class="">
