--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -28,14 +28,14 @@
 
   .control-text {
     white-space: pre-wrap;
-    font-size: 12pt;
-    max-width: 700px;
+    font-size: 11pt;
+    /*max-width: 700px;*/
     font-family: trebuchet ms, sans-serif;
-    /*text-align: justify;
-    text-justify: inter-word;*/
+    text-align: justify;
+    /*text-justify: inter-word;*/
   }
 
-  #control_lookup input {
+  #control-lookup input {
     width: 130px;
   }
 
@@ -52,8 +52,24 @@ Remove contextbar from top of page
 <div style="margin-top: 30px">
 
   <div class="row" style="">
-    <div style="float: right; margin: 0 0.5em 0em 5em;">
-        <form id="control_lookup" method="get" action="/controls/" onsubmit="show_control_by_id(); return false;">
+    <div style="float: left; padding: 0 0 0 1em;">
+        {% if control.title is not None %}
+        <h2 class="control-heading" style="">
+          <small style="color: #888;">NIST SP 800-53 Rev 4</small><br>
+          System Name - {{ control.id_display|upper }} {{ control.title }}
+        </h2>
+        {% else %}
+        <h2 class="control-heading" style="">
+          <small style="color: #888;">NIST SP 800-53</small><br>
+          {{ control.id }}
+        </h2>
+        <div id="control-message">
+          <p>The control {{ control.id }} was not found in the control catalog.</p>
+        </div>
+        {% endif %}
+    </div>
+    <div style="float: right; padding: 0 0.5em 0em 5em;">
+        <form id="control-lookup" method="get" action="/controls/" onsubmit="show_control_by_id(); return false;">
           <input type="text" value="" name="id" placeholder="Enter control id"/>
               <button type="submit" class="btn btn-success">Look up</button>
               <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -62,94 +78,88 @@ Remove contextbar from top of page
     </div>
   </div><!--/row-->
 
-    <div class="row" style="">
+  <div class="row" style="">
 
-      <div id="control_info" class="col-xs-5 col-sm-5 col-md-5 col-lg-4 col-xl-3" style="border-right:1px solid gray;">
-            {% if control.title is not None %}
-            <h2 id="control-heading" class="">
-              <small style="color: #888;">NIST SP 800-53 Rev 4</small><br>
-              {{ control.id_display|upper }} {{ control.title }}
-            </h2>
-            <div>
-              <div id="control-description" class="control-text"><h3>Description</h3>{{ control.description }}</div>
-              <div id="control-guidance"  class="control-text"><h3>Guidance</h3>{{ control.guidance }}</div>
-            </div>
-            {% else %}
-            <h2 id="control-heading" class="">
-              <small style="color: #888;">NIST SP 800-53</small><br>
-              {{ control.id }}
-            </h2>
-            <div id="control-message">
-              <p>The control {{ control.id }} was not found in the control catalog.</p>
-            </div>
-            {% endif %}
-      </div>
-
-      <div id="control_info2" class="col-xs-5 col-sm-5 col-md-5 col-lg-4 col-xl-3" style="border-right:1px solid gray;">
+      <div id="control-info" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
         {% if control.title is not None %}
-        <h2 id="control-heading" class="">
-          <small style="color: #888;">NIST SP 800-53 Rev 4 <i>Editor</i></small><br>
-        </h2>
-        <div>
-          <form>
-               <div class="form-group">
-                <label for="component">Provider</label>
-                <div id="component">{{ccp_name}}</div>
-              </div>
-
-              <div class="form-group">
-                <label for="src_control_content">Control Content</label>
-                <textarea class="form-control" id="src_control_content" placeholder="Paste control text here" rows="5" cols="50">{% if common_controls|length > 0 %}{% for control in common_controls %}{{control.legacy_imp_smt}}{% endfor %}{% endif %}
-                </textarea>
-              </div>
-          </form>
+        <div class="row" style="width:90%; padding: 0 0 0 1em;">
+          <div id="control-description" class="control-text"><h3>Control Description</h3>{{ control.description }}</div>
+          <div id="control-guidance"  class="control-text"><h3>Control Guidance</h3>{{ control.guidance }}</div>
         </div>
         {% else %}
-        <h2 id="control-heading" class="">
-          <small style="color: #888;">NIST SP 800-53</small><br>
-          {{ control.id }}
-        </h2>
         <div id="control-message">
           <p>The control {{ control.id }} was not found in the control catalog.</p>
         </div>
         {% endif %}
       </div>
 
-      <div id="control_info4" class="col-xs-5 col-sm-5 col-md-5 col-lg-4 col-xl-3" style="border-right:1px solid gray;">
-        {% if control.title is not None %}
-        <h2 id="control-heading" class="">
-          <small style="color: #888;">NIST SP 800-53 Rev 4 <i>Editor</i></small><br>
-        </h2>
-        <div>
-          <form>
-              <div class="form-group">
-                <label for="compoment">Component</label>
-                <input type="text" class="form-control" id="component" placeholder="Name of component">
-              </div>
-              <div class="form-group">
-                <label for="statement">Control Statement</label>
-                <textarea class="form-control" id="statement" placeholder="Paste control text here" rows="5" cols="50"></textarea>
-              </div>
-              <div class="form-group">
-                <label for="app_remarks">Remarks</label>
-                <textarea class="form-control" id="app_remarks" placeholder="Paste control text here" rows="5" cols="50"></textarea>
-              </div>
-          </form>
+      <div id="" class="col-spacer col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+
+        <div class="row">
+          <div id="control-description" class="control-text"><h3>Common Control Implementations</h3></div>
         </div>
-        {% else %}
-        <h2 id="control-heading" class="">
-          <small style="color: #888;">NIST SP 800-53</small><br>
-          {{ control.id }}
-        </h2>
-        <div id="control-message">
-          <p>The control {{ control.id }} was not found in the control catalog.</p>
+
+        <div class="row" style="width:90%;">
+          {% if control.title is not None %}
+
+        {% if common_controls|length > 0 %}
+        {% for control in common_controls %}
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tabx" id="document-cc-panel_num-title">
+            <h4 class="panel-title">
+              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-cc-panel_num-body" aria-expanded="{% if forloop.first %}true{% endif %}" aria-controls="document-cc-panel_num-body">
+                {{control.name}} Common Control Implementation
+              </a>
+            </h4>
+          </div>
+          <div id="document-cc-panel_num-body" class="panel-collapse collapse {% if forloop.first %}in{% endif %} output-document" role="tabpanel" aria-labelledby="document-cc-panel_num-title">
+            <div class="panel-body output-document">
+
+              <div>
+                <form>
+                  <div class="form-group">
+                    <label for="compoment">Component</label>
+                    <input type="text" class="form-control" id="component" placeholder="Name of component" value="{{control.name}}">
+                  </div>
+                  <div class="form-group">
+                    <label for="statement">Statement</label>
+                    <textarea class="form-control" id="statement" placeholder="Paste control text here" rows="5" cols="50">{{control.legacy_imp_smt}}</textarea>
+                  </div>
+                  <div class="form-group">
+                    <label for="app_remarks">Remarks</label>
+                    <textarea class="form-control" id="app_remarks" placeholder="Paste control text here" rows="5" cols="50"></textarea>
+                  </div>
+                </form>
+              </div>
+
+            </div>
+          </div>
         </div>
+        {% endfor %}
         {% endif %}
+
+          {% endif %}
+        </div>
       </div>
 
-    </div><!--/row-->
+      <div id="smt-block" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4" style="">
 
-</div>
+        <div class="row">
+          <div id="" class="control-text"><h3>Other Implementations <button type="submit" class="small btn btn-xs btn-success" style="color: white;" onclick="add_smt()">Add</button></h3></div>
+          <div id="smt-list" class="" style="width: 90%">
+
+          </div><!--/smt-list-->
+        </div>
+
+         <!-- <div class="row">
+          <div id="smt-add-link" class="" style="">
+            As the customer of this Common Control, you may have responsibilities. <button type="submit" class="btn btn-link" onclick="add_smt()">Add implementation now.</button>
+          </div>
+        </div> -->
+
+      </div><!--/smt-block-->
+
+</div><!--/page content-->
 
       {{ block.super }}
       {% endblock %}
@@ -158,9 +168,76 @@ Remove contextbar from top of page
       <script>
         // Submits control id for Control look up box
         function show_control_by_id() {
-          var control_id = $('#control_lookup').find('input[name="id"]').val();
+          var control_id = $('#control-lookup').find('input[name="id"]').val();
           var url = "/controls/"+"800-53"+"/"+control_id+"/editor";
           window.location.href = url;
         }
       </script>
+
+      <script>
+        function show_module_smt_editor() {
+          // Initialize form state for the compliance app catalog information
+          // field and the module specification field.
+          // $('#authoring_tool_catalog_metadata').parents('.form-group').toggle(typeof window.q_authoring_tool_state.catalog_yaml != "undefined");
+          // $('#authoring_tool_catalog_metadata').val(window.q_authoring_tool_state.catalog_yaml);
+          // $('#authoring_tool_mspec').val(window.q_authoring_tool_state.module_yaml);
+
+          // Show modal.
+          $('#module_smt_editor').modal();
+        }
+
+        // Submits control id for Control look up box
+        function add_smt() {
+          var panel_num = $('.panel').length + 1
+          var smt_form = `
+            <div class="panel panel-default">
+            <div class="panel-heading" role="tabx" id="document-panel_num-title">
+              <h4 class="panel-title">
+                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-panel_num-body" aria-expanded="{% if forloop.first %}true{% endif %}" aria-controls="document-panel_num-body">
+                  Other {{ control.id|upper }} Component Implementation
+                </a>
+              </h4>
+            </div>
+            <div id="document-panel_num-body" class="panel-collapse collapse {% if forloop.first %}in{% endif %} output-document" role="tabpanel" aria-labelledby="document-panel_num-title">
+              <div class="panel-body output-document">
+
+            <div>
+              <form>
+                <div class="form-group">
+                  <label for="compoment">Component</label>
+                  <input type="text" class="form-control" id="component" placeholder="Name of component">
+                </div>
+                <div class="form-group">
+                  <label for="statement">Statement</label>
+                  <textarea class="form-control" id="statement" placeholder="Paste control text here" rows="5" cols="50"></textarea>
+                </div>
+                <div class="form-group">
+                  <label for="app_remarks">Remarks</label>
+                  <textarea class="form-control" id="app_remarks" placeholder="Paste control text here" rows="5" cols="50"></textarea>
+                </div>
+
+              <div class="modal-footer">
+                <button type="button" class="btn btn-xs btn-danger" onclick="authoring_tool_delete_question()">Delete</button>
+                <button type="button" class="btn btn-xs btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-xs btn-success" onclick="authoring_tool_save_module()">Save</button>
+              </div>
+
+              </form>
+            </div>
+
+              </div>
+            </div>
+          </div>`.replace(/panel_num/g, panel_num);
+          $( "#smt-list" ).append(smt_form);
+          console.log("add_smt()");
+        }
+
+        function edit_smt() {
+          console.log("Edit statement - open modal");
+          show_module_smt_editor();
+        }
+      </script>
+
+
+
       {% endblock %}
