--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -78,7 +78,7 @@ Remove contextbar from top of page
     </div>
   </div><!--/row-->
 
-  <div class="row" style="">
+  <div id="page-content" class="row" style="">
 
       <div id="control-info" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
         {% if control.title is not None %}
@@ -190,11 +190,11 @@ Remove contextbar from top of page
         function add_smt() {
           var panel_num = $('.panel').length + 1
           var smt_form = `
-            <div class="panel panel-default">
+            <div id="panel-panel_num" class="panel panel-default">
             <div class="panel-heading" role="tabx" id="document-panel_num-title">
-              <h4 class="panel-title">
+              <h4 id="panel-panel_num-title" class="panel-title">
                 <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-panel_num-body" aria-expanded="{% if forloop.first %}true{% endif %}" aria-controls="document-panel_num-body">
-                  Other {{ control.id|upper }} Component Implementation
+                  <span id="component-panel_num-title">Other</span> {{ control.id|upper }} Component Implementation
                 </a>
               </h4>
             </div>
@@ -202,24 +202,28 @@ Remove contextbar from top of page
               <div class="panel-body output-document">
 
             <div>
-              <form>
+              <form id="smt_panel_num">
                 <div class="form-group">
                   <label for="compoment">Component</label>
-                  <input type="text" class="form-control" id="component" placeholder="Name of component">
+                  <input type="text" class="form-control" id="component" name="component" placeholder="Name of component"
+                    onchange="$('#component-panel_num-title').text($(this).val());">
                 </div>
                 <div class="form-group">
                   <label for="statement">Statement</label>
-                  <textarea class="form-control" id="statement" placeholder="Paste control text here" rows="5" cols="50"></textarea>
+                  <textarea class="form-control" id="statement" name="statement" placeholder="Paste control text here" rows="5" cols="50"></textarea>
                 </div>
                 <div class="form-group">
                   <label for="app_remarks">Remarks</label>
-                  <textarea class="form-control" id="app_remarks" placeholder="Paste control text here" rows="5" cols="50"></textarea>
+                  <textarea class="form-control" id="app_remarks" name="app_remarks" placeholder="Paste control text here" rows="5" cols="50"></textarea>
                 </div>
 
+                <input type="hidden" id="control_id" name="control_id" value="{{ control.id }}">
+                <input type="hidden" id="system_id" name="system_id" value="1">
+
               <div class="modal-footer">
-                <button type="button" class="btn btn-xs btn-danger" onclick="authoring_tool_delete_question()">Delete</button>
-                <button type="button" class="btn btn-xs btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-xs btn-success" onclick="authoring_tool_save_module()">Save</button>
+                <button type="button" name="submit" value="delete" class="btn btn-xs btn-danger" onclick="authoring_tool_delete_question()">Delete</button>
+                <button type="button" name="submit" value="cancel" class="btn btn-xs btn-default" data-dismiss="modal">Cancel</button>
+                <button type="submit" name="save" value="save" class="btn btn-xs btn-success" onclick="save_smt('smt_panel_num');return false">Save</button>
               </div>
 
               </form>
@@ -238,6 +242,33 @@ Remove contextbar from top of page
         }
       </script>
 
+      <script>
+        // Manage statement Ajax submissions
 
+        function save_smt(smt_panel_num) {
+          // Save a statement
+          // console.log("smt_panel_num is "+smt_panel_num);
+          // serialize data from the identified statement form
+          var data = $( '#'+smt_panel_num  ).serialize()
+
+          // send data via ajax to be saved
+          ajax_with_indicator({
+              url: "/controls/smt/_save/",
+              method: "POST",
+              data: data,
+              indicator_parent: $('#page-content'),
+              keep_indicator_forever: false, // keep the ajax indicator up forever --- it'll go away when we issue the redirect
+              success: function(res) {
+                console.log('success');
+                console.log(res)
+              }
+          });
+
+          // don't do an actual <form> submit
+          return false;
+
+        }; // /save_smt
+
+      </script>
 
       {% endblock %}
