Quick fix for navbar Controls link

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,7 +21,7 @@
           <li><a href="/projects" id="menu-projects">Projects</a></li>
           <li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
           <li><a href="/portfolios" id="menu-portfolios">Portfolios</a></li>
-          <li><a href="/controls/800-53//" id="menu-controls">Controls</a></li>
+          <li><a href="/controls" id="menu-controls">Controls</a></li>
         {% endif %}
       </ul>
 
