--- a/templates/controls/index-catalogs.html
+++ b/templates/controls/index-catalogs.html
@@ -28,17 +28,15 @@ Remove contextbar from top of page
     </div>
 
     <h2 id="control-heading" class="">
-      Controls in Group
+      Catalogs
     </h2>
-    <h3>{{ catalog.oscal.metadata.title }}</h3>
     <div>
       <ul>
-      {% for cl in group.controls %}
-        <li><a href="../{{ cl.id }}">{{ cl.id|upper }}</a> - {{ cl.title }}</li>
+      {% for catalog in catalogs.index %}
+        <li><a href="800-53/family/{{ group.id }}">View</a> - {{ catalog.metadata.title }}</li>
       {% endfor %}
       </ul>
     </div>
-
   </div>
 </div>
 
