Display mutiple catalogs and their controls

--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -60,7 +60,7 @@ Remove contextbar from top of page
         </h2>
         {% else %}
         <h2 class="control-heading" style="">
-          <small style="color: #888;">NIST SP 800-53</small><br>
+          <small style="color: #888;">{{ catalog.catalog_key_display }}</small><br>
           {{ control.id }}
         </h2>
         <div id="control-message">
