--- a/templates/controls/index-group.html
+++ b/templates/controls/index-group.html
@@ -28,13 +28,13 @@ Remove contextbar from top of page
     </div>
 
     <h2 id="control-heading" class="">
-      Controls in Group
+      <small style="color: #888;">{{ catalog.catalog_key_display }}</small><br>
+      {{ group.id|upper }} - {{ group.title }} Controls
     </h2>
-    <h3>{{ catalog.oscal.metadata.title }}</h3>
     <div>
       <ul>
       {% for cl in group.controls %}
-        <li><a href="../{{ cl.id }}">{{ cl.id|upper }}</a> - {{ cl.title }}</li>
+        <li><a href="/controls/catalogs/{{ catalog.catalog_key }}/control/{{ cl.id }}">{{ cl.id|upper }}</a> - {{ cl.title }}</li>
       {% endfor %}
       </ul>
     </div>
