Properly rread impl statements from database by system
Continue developing the editor by connecting a control to
a specific system and to a set of statements. When looking
up a system control, the existing implementation statements
for that system are read from database and displayed in editor.

Provide new routes for viewing system related controls.

Modify system model to not requie FISMA Id

TODO:
- manage save/create vs edit function on existing statement

--- a/templates/controls/detail.html
+++ b/templates/controls/detail.html
@@ -84,7 +84,7 @@ Remove contextbar from top of page
       <script>
         function show_control_by_id() {
           var control_id = $('#control_lookup').find('input[name="id"]').val();
-          var url = "/controls/"+"800-53"+"/"+control_id+"/";
+          var url = "/controls/catalogs/{{ catalog.catalog_key }}/control/"+control_id;
           window.location.href = url;
         }
       </script>
