--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -56,7 +56,7 @@ Remove contextbar from top of page
         {% if control.title is not None %}
         <h2 class="control-heading" style="">
           <small style="color: #888;">NIST SP 800-53 Rev 4</small><br>
-          System Name - {{ control.id_display|upper }} {{ control.title }}
+          {{ system.root_element.name }} > {{ control.id_display|upper }} {{ control.title }}
         </h2>
         {% else %}
         <h2 class="control-heading" style="">
@@ -147,6 +147,55 @@ Remove contextbar from top of page
         <div class="row">
           <div id="" class="control-text"><h3>Other Implementations <button type="submit" class="small btn btn-xs btn-success" style="color: white;" onclick="add_smt()">Add</button></h3></div>
           <div id="smt-list" class="" style="width: 90%">
+            {% for smt in impl_smts %}
+            <div id="panel-{{ forloop.counter }}" class="panel panel-default">
+              <div class="panel-heading" role="tab" id="document-{{ forloop.counter }}-title">
+                <h4 id="panel-{{ forloop.counter }}-title" class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#document-{{ forloop.counter }}-body" aria-expanded="{% if forloop.first %}true{% endif %}" aria-controls="document-{{ forloop.counter }}-body">
+                    {{ smt.described_element.name }} {{ control.id|upper }} Component Implementation
+                  </a>
+                </h4>
+              </div>
+              <div id="document-{{ forloop.counter }}-body" class="panel-collapse collapse output-document" role="tabpanel" aria-labelledby="document-{{ forloop.counter }}-title">
+                <div class="panel-body output-document">
+
+              <div>
+                <form id="smt_{{ forloop.counter }}">
+                  <div class="form-group">
+                    <label for="compoment">Component</label>
+                    <input type="text" class="form-control" id="element" name="element" placeholder="Name of component"
+                      onchange="$('#element-{{ forloop.counter }}-title').text($(this).val());" value="{{ smt }}">
+                  </div>
+                  <div class="form-group">
+                    <label for="statement">Statement</label>
+                    <textarea class="form-control" id="body" name="body" placeholder="Paste control text here" rows="5" cols="50">{{ smt.body }}</textarea>
+                  </div>
+                  <div class="form-group">
+                    <label for="remarks">Remarks</label>
+                    <textarea class="form-control" id="remarks" name="remarks" placeholder="Paste control text here" rows="5" cols="50">{{ smt.remarks }}</textarea>
+                  </div>
+
+                  <input type="hidden" id="control_id" name="control_id" value="{{ control.id }}">
+                  <input type="input" id="system_id" name="system_id" value="{{ system.id }}">
+                  <input type="hidden" id="sid" name="sid" value="{{ control.id }}">
+                  <input type="hidden" id="sid_class" name="sid_class" value="800-53rev4">
+                  <input type="hidden" id="statement_type" name="statement_type" value="control_implementation">
+
+                <div class="modal-footer">
+                  <div id="success-msg-smt_{{ forloop.counter }}" style="display: inline; margin-right: 20px; color: gray;"></div>
+                  <button type="button" name="submit" value="delete" class="btn btn-xs btn-danger" onclick="authoring_tool_delete_question()">Delete</button>
+                  <button type="button" name="submit" value="cancel" class="btn btn-xs btn-default" data-dismiss="modal">Cancel</button>
+                  <button type="submit" name="save" value="save" class="btn btn-xs btn-success" onclick="save_smt('smt_{{ forloop.counter }}');return false">Save</button>
+                </div>
+
+                </form>
+              </div>
+
+                </div>
+              </div>
+            </div>
+
+            {% endfor %}
 
           </div><!--/smt-list-->
         </div>
@@ -169,7 +218,7 @@ Remove contextbar from top of page
         // Submits control id for Control look up box
         function show_control_by_id() {
           var control_id = $('#control-lookup').find('input[name="id"]').val();
-          var url = "/controls/"+"800-53"+"/"+control_id+"/editor";
+          var url = "/systems/{{ system.id }}/controls/catalogs/{{ catalog.catalog_key }}/control/"+control_id+"/editor";
           window.location.href = url;
         }
       </script>
@@ -186,7 +235,7 @@ Remove contextbar from top of page
           $('#module_smt_editor').modal();
         }
 
-        // Submits control id for Control look up box
+        // Adds statement form to page
         function add_smt() {
           var panel_num = $('.panel').length + 1
           var smt_form = `
@@ -218,7 +267,7 @@ Remove contextbar from top of page
                 </div>
 
                 <input type="hidden" id="control_id" name="control_id" value="{{ control.id }}">
-                <input type="hidden" id="system_id" name="system_id" value="1">
+                <input type="input" id="system_id" name="system_id" value="{{ system.id }}">
                 <input type="hidden" id="sid" name="sid" value="{{ control.id }}">
                 <input type="hidden" id="sid_class" name="sid_class" value="800-53rev4">
                 <input type="hidden" id="statement_type" name="statement_type" value="control_implementation">
@@ -237,7 +286,6 @@ Remove contextbar from top of page
             </div>
           </div>`.replace(/panel_num/g, panel_num);
           $( "#smt-list" ).append(smt_form);
-          console.log("add_smt()");
         }
 
         function edit_smt() {
